# ChatTranslate

./: .env.example  .gitignore  README.md  pyproject.toml
books/Le_Droit_A_La_Ville_I_Henri_Lefebvre/: Le_Droit_A_La_Ville_I_Henri_Lefebvre.book  images
books/Le_Droit_A_La_Ville_I_Henri_Lefebvre/chapters/: ch_000_front.md  ch_008.md  ch_009.md  ch_011.md  ch_013.md  ch_015.md  ch_016.md  ch_017.md  ch_018.md  ch_020.md  ch_021.md  ch_022.md  ch_026.md  ch_028.md  ch_029.md  ch_032.md  ch_033.md  ch_034.md  ch_035.md  ch_036.md  ch_037.md  ch_038.md  ch_039.md  ch_041.md  ch_042.md
books/Le_Droit_A_La_Ville_I_Henri_Lefebvre/output/: Le_Droit_A_La_Ville_I_Henri.epub
books/Le_Droit_A_La_Ville_I_Henri_Lefebvre/proofread/: full_zh.md
books/Le_Droit_A_La_Ville_I_Henri_Lefebvre/translated/: _glossary.json
books/城市权利-列斐伏尔/: KNOWN_ISSUES.md  meta.yaml  style.css  城市权利-列斐伏尔.book
books/城市权利-列斐伏尔/final/: ch_010.md  (+8 more)
docs/: KNOWN_GAPS.md  TEST_SAMPLE_GENERATOR_PLAN.md
scripts/: build-book.sh  run-batch-retranslate.py  run-clean.py  run-epub.py  run-merge.py  run-ocr.py  run-proofread.py  run-scan.py  run-split.py  run-translate.py  run_batch_retranslate.py  run_clean.py  run_epub.py  run_merge.py  run_ocr.py  run_proofread.py  run_scan.py  run_split.py  run_translate.py  run_verify_epub.py
src/: __init__.py  batch_retranslate.py  clean.py  config.py  merge.py  ocr.py  proofread.py  scan.py  scan_untranslated.py  split.py  translate.py  verify_epub.py
tests/: test_cli_entrypoints.py  test_merge.py  test_scan_quality.py  test_split.py
tests/fixtures/: ocr_sample.md
(+3 files in other folders)
